--- a/main.html
+++ b/main.html
@@ -9,7 +9,36 @@
 </head>
 <body>
     <!-- add table here -->
-
-        
+	<table>
+	<thead>
+	 <tr>
+		<th>game stats</th>
+        <th>CBSE result sheet</th>
+	    <th>Covid stats</th>
+	 </tr>
+</thead>
+<tbody>
+	<tr>
+		<td>A</td>
+		<td>B</td>
+		<td>A</td>
+	</tr>
+	<tr>
+		<td>B</td>
+		<td>C</td>
+		<td>A</td>
+	</tr>
+	<tr>
+		<td>F</td>
+		<td>C</td>
+		<td>A</td>
+	</tr>
+	<tr>
+		<td>A</td>
+		<td>C</td>
+		<td>B</td>
+	</tr>
+</tbody>
+	</table>
 </body>
 </html>
